[package]
name = "mrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkoala = { path = "../libkoala" }
interface = { path = "../interface" }
ipc = { path = "../ipc" }
memmap-fixed = { path = "../memmap-fixed" }
slabmalloc = { path = "../slabmalloc" }

thiserror = "1.0.29"
anyhow = "1.0.44"
uuid = "0.8.2"
ibverbs = "0.6.1"
dns-lookup = "1.0.8"
libc = "0.2.103"
nix = "0.23.0"
fnv = "1.0.7"
memfd = "0.4.1"
memmap2 = "0.5.0"
spin = "0.9.2"
lazy_static = "1.4.0"
tracing = "0.1"
dashmap = "5.3.4"
smol = "1.2.5"
async-executor = "1.4.1"
bytes = "1.1.0"
arrayvec = "0.7"
async-trait = "0.1.56"
