[package]
name = "phoenix-common-workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hack: these following features are manually enabled
uapi = { workspace = true, features = ["mrpc", "salloc", "transport"] }
ipc = { workspace = true, features = ["all"] }

futures-core = { workspace = true, features = ["default"] }
crossbeam-utils = { version = "0.8.12", features = ["default"] }
crossbeam-channel = { version = "0.5.6", features = ["default", "std", "crossbeam-utils"] }
crossbeam-epoch = { version = "0.9.14", features = ["default"] }
hashbrown = { version = "0.12.3", features = ["raw"] }
mio = { workspace = true, features = ["default", "net", "os-ext", "os-poll"] }
log = { workspace = true, features = ["std"] }
once_cell = { version = "1.17.1", features = ["default", "unstable"] }
getrandom = { version = "0.2.8", features = ["js", "rdrand", "std"] }
ahash = { version = "0.7.6", features = ["default"] }
tokio = { workspace = true, features = ["full"] } # only sync is needed
