[package]
name = "phoenix_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
# uapi = { workspace = true, features = ["mrpc"] } # Should be removed
uapi = { workspace = true, features = ["mrpc", "salloc", "transport"] }
# hack: all for including "default" feature of tracing_core
# ipc.workspace = true
ipc = { workspace = true, features = ["all"] }

# TODO(remove the deps)
uapi-mrpc = { path = "../../experimental/mrpc/uapi/mrpc" }

tracing.workspace = true
tracing-core = { workspace = true, features = ["default"] }
anyhow.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
nix = { workspace = true, default-features = false, features = ["signal", "process"] }
fnv.workspace = true
futures = { workspace = true, features = ["executor", "thread-pool"] }
# tokio = { workspace = true, features = ["sync"] }
tokio = { workspace = true, features = ["full"] } # only sync is needed
dashmap.workspace = true
smallvec.workspace = true
minstant.workspace = true
static_assertions.workspace = true
semver.workspace = true
sharded-slab.workspace = true
libnuma.workspace = true
libnuma-sys.workspace = true

# hack: manually enable these features
# TODO: move these to a separate phoenix-common-workspace crate
futures-core = { workspace = true, features = ["default"] }
crossbeam-utils = { version = "0.8.12", features = ["default"] }
crossbeam-channel = { version = "0.5.6", features = ["default", "std", "crossbeam-utils"] }
crossbeam-epoch = { version = "0.9.14", features = ["default"] }
hashbrown = { version = "0.12.3", features = ["raw"] }
mio = { workspace = true, features = ["default", "net", "os-ext", "os-poll"] }
log = { workspace = true, features = ["std"] }
once_cell = { version = "1.17.1", features = ["default", "unstable"] }
getrandom = { version = "0.2.8", features = ["js", "rdrand", "std"] }
ahash = { version = "0.7.6", features = ["default"] }
