[package]
name = "phoenixctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc.workspace = true
uapi.workspace = true

uapi-policy-ratelimit = { path = "../../experimental/mrpc/uapi/policy/ratelimit" }
uapi-policy-qos = { path = "../../experimental/mrpc/uapi/policy/qos" }
uapi-rpc-adapter = { path = "../../experimental/mrpc/uapi/rpc_adapter" }

uuid.workspace = true
bincode.workspace = true
structopt.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = { workspace = true, features = ["preserve_order"] }
lazy_static.workspace = true
prettytable-rs.workspace = true
