[package]
name = "phoenixctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc.workspace = true
phoenix-api.workspace = true

phoenix-api-policy-ratelimit = { path = "../../experimental/mrpc/phoenix-api/policy/ratelimit" }
phoenix-api-policy-qos = { path = "../../experimental/mrpc/phoenix-api/policy/qos" }
phoenix-api-rpc-adapter = { path = "../../experimental/mrpc/phoenix-api/rpc_adapter" }

uuid.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = { workspace = true, features = ["preserve_order"] }
lazy_static.workspace = true
prettytable-rs.workspace = true
