[package]
name = "phoenixd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
anyhow = "1.0.58"
nix = "0.25.0"
ansi_term = "0.12.1"
chrono = "0.4.19"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-chrome = "0.6"

phoenix = { path = "../phoenix" }
