[package]
name = "phoenixos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phoenix-api = { workspace = true, features = ["mrpc"] } # Should be removed
ipc.workspace = true
phoenix_common.workspace = true
mmap.workspace = true

# TODO(remove the deps)
phoenix-api-mrpc = { path = "../../experimental/mrpc/phoenix-api/mrpc" }

chrono.workspace = true
ansi_term.workspace = true
# tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "ansi", "smallvec"] }
tracing-appender.workspace = true
tracing-chrome.workspace = true
anyhow.workspace = true
thiserror.workspace = true
num_cpus.workspace = true
nix = { workspace = true, default-features = false, features = ["signal", "process"] }
libc.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true
lazy_static.workspace = true
spin.workspace = true
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["preserve_order"] }
futures = { workspace = true, features = ["executor", "thread-pool"] }
dashmap.workspace = true
minstant.workspace = true
itertools.workspace = true
petgraph.workspace = true
semver.workspace = true

crc32fast.workspace = true
libnuma.workspace = true
libnuma-sys.workspace = true
serde_json.workspace = true
page_size.workspace = true

# linker
object = { workspace = true, features = ["write"] }
rustc-demangle.workspace = true
