[package]
name = "rdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.70"

[dependencies]
thiserror = "1.0.29"
log = "0.4.14"
dns-lookup = "1.0.8"
libc = "0.2.103"
static_assertions = "1.1.0"
socket2 = "0.4.2"
memfd = "0.4.1"
memmap2 = "0.5.0"
bincode = { version = "1.3.3", optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }
nix = { version = "0.23.0", optional = true }
ipc = { path = "../ipc", optional = true }
interface = { path = "../interface", optional = true }
memmap-fixed = { path = "../memmap-fixed", optional = true }
spin = { version = "0.9.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
koala = ["interface", "ipc", "serde", "bincode", "nix", "memmap-fixed", "spin", "lazy_static"]
