[package]
name = "rdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen.workspace = true
cc.workspace = true

[dependencies]
uapi = { workspace = true, optional = true }

thiserror.workspace = true
log.workspace = true
libc.workspace = true
static_assertions.workspace = true
socket2.workspace = true
memfd.workspace = true
bincode = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
mmap = { workspace = true, optional = true }
spin = { workspace = true", optional = true }
lazy_static = { workspace = true", optional = true }
nix = { workspace = true, features = ["socket"] }

[features]
phoenix = ["dep:uapi", "dep:serde", "dep:bincode", "dep:mmap", "dep:spin", "dep:lazy_static"]
