[package]
name = "shm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmap.workspace = true

nix.workspace = true
lazy_static.workspace = true
smol.workspace = true
memfd.workspace = true
spin.workspace = true
tracing.workspace = true
thiserror.workspace = true

[features]
mrpc = []
